# Remitly-2025

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
data/: Interns_2025_SWIFT_CODES.xlsx
src/: crud.py  db.py  fetch_xlsx.py  main.py  model.py  pydantic_structure.py
tests/: test_endpoints.py
