[project]
name = "remitly-2025-intern"
version = "0.1.0"
description = "Pure for internship task"
authors = [
    {name = "Bartłomiej Kruczek",email = "bkruczekk@student.agh.edu.pl"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=8.3.5,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "psycopg (>=3.2.6,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pytest-asyncio (>=0.26.0,<0.27.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"